# riko

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README  README.rst  __init__.py  compile.py  conftest.py  dev-requirements.txt  dev_requirements.txt  investigation.md  manage.py  opfilter.py  optional-requirements.txt  pipe2python.py  pipefetch.py  pipefilter.py  pipeoutput.py  pipes.wpr  pprint.py  pprint2.py  py2-requirements.txt  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  sinkoutput.py  sourcefetchfeed.py  testpipe1.py  testpipe_multi.py  (+4 more)
.github/workflows/: ci.yml
.serena/: project.yml
benchmarks/: parallel.py
data/: Politik.xml  TheEdTechie.xml  Topthemen.xml  bbc.html  blog.ouseful.info_feed.xml  caltrain.html  cnn.html  edition.cnn.html  election_results.json  feed.xml  feeds.delicious.com_v2_rss_popular?count=3.xml  feeds.feedburner.com_TheEdTechie.xml  feeds.feedburner.com_yodelanecdotal.xml  feeds.gawker.com_jalopnik_full.xml  gawker.xml  gigs.json  google_spreadsheet.csv  kazeeki.json  kazeeki2.json  kazeeki_1.json  kazeeki_2.json  kazeeki_3.json  news.yahoo.com_rss_health.xml  news.yahoo.com_rss_topstories.html  ouseful.xml  ouseful_feedburner.xml  places.xml  psychemedia_slideshare.xml  quote.json  rss.sueddeutsche.de_rss_Politik.xml  rss.sueddeutsche.de_rss_Topthemen.xml  scotland.xml  status.csv  topstories.xml  users.jyu.fi.html  www.bbc.co.uk_news.html  www.bbc.co.uk_programmes_b006mvlc_episodes_player.xml  www.greenhughes.com_rssfeed.xml  www.sciencedaily.com_rss_computers_math.html  yql.xml
docs/: ANYIO_SUPPORT.md  API_STABILITY.md  ASYNC_AWAIT_CONVERSION.md  AUTHORS.rst  CHANGES.rst  COOKBOOK.rst  DAG_FORMAT.md  FAQ.rst  INSTALLATION.rst  ROADMAP.md  TODO.rst  optimize.md
docs/gameplans/: README.md  agents.md  ai-Inference.md  azure-automation.md  cli.md  connectors.md  database-transforms.md  dotdict-parsing.md  enrichment-modules.md  mcp.md  module-documentation.md  orchestration.md  productionizing.md  repo-refinement.md  riko-site.md  twisted-protocol-servers.md
examples/: demo.py  gigs.py  kazeeki.py  pipe_1a0ea1b39a8f261d0339a12fb5f0f03e.py  pipe_4f26297843f4952fad920af5990ddc50.py  pipe_679e2c544332e978b15b6b163767975f.py  pipe_a3d1afa31f0a24cc51dcbe79f1590343.py  pipe_base.py  pipe_gigs.py  pipe_kazeeki.py  pipe_simple1.py  pipe_simple2.py  pipe_split.py  pipe_test.py  pipe_wired.py  simple1.py  simple2.py  split.py  usage.ipynb  usage.py  wired.py
helpers/: check-stage  clean  pippy  srcdist  wheel
modules/: __init__.py  pipecount.py  pipecreaterss.py  pipedatebuilder.py  pipedateformat.py  pipefetch.py  pipefetchdata.py  pipefetchpage.py  pipefilter.py  pipeforever.py  pipeitembuilder.py  pipeloop.py  pipenumberinput.py  pipeoutput.py  pipeprivateinput.py  piperegex.py  piperename.py  pipereverse.py  piperssitembuilder.py  pipesimplemath.py  pipesort.py  pipesplit.py  pipestrconcat.py  pipestringtokenizer.py  pipestrregex.py  pipestrreplace.py  pipesubstr.py  pipetail.py  pipetextinput.py  pipetruncate.py  pipeunion.py  pipeuniq.py  pipeurlbuilder.py  pipeurlinput.py  pipexpathfetchpage.py  pipeyql.py
pipe2py/: __init__.py  compile.py  dotdict.py  pprint2.py  topsort.py  util.py
pipe2py/data/: edition.cnn.html  feeds.delicious.com_v2_rss_popular?count=15.xml  feeds.delicious.com_v2_rss_popular?count=3.xml  feeds.delicious.com_v2_rss_psychemedia?count=15.xml  feeds.feedburner.com_TheEdTechie.xml  feeds.feedburner.com_ouseful.xml  feeds.feedburner.com_yodelanecdotal.xml  feeds.gawker.com_jalopnik_full.xml  kazeeki.json  news.yahoo.com_rss_topstories.xml  places.xml  rsc-ne-scotland.org.uk_mashe_ititle_xml_jisc10bean.xml  rss.sueddeutsche.de_rss_Politik.xml  rss.sueddeutsche.de_rss_Topthemen.xml  www.autoblog.com_rss.xml  www.bbc.co.uk_news.html  www.bbc.co.uk_programmes_b006mvlc_episodes_player.xml  www.caltrain.com_Fares_farechart.html  www.fourtitude.com_news_publish_rss.xml  www.slideshare.net_rss_user_psychemedia.xml  www.theguardian.com_politics_api_general_election_2010_results_json.json
pipe2py/lib/: autorss.py  collections.py  dotdict.py  log.py  pprint2.py  topsort.py  unicodecsv.py  utils.py
pipe2py/modules/: __init__.py  autorss.py  feedparser.py  pipecount.py  pipecreaterss.py  pipecsv.py  pipecurrencyformat.py  pipedatebuilder.py  pipedateformat.py  pipeexchangerate.py  pipefeedautodiscovery.py  pipefetch.py  pipefetchdata.py  pipefetchpage.py  pipefetchsitefeed.py  pipefilter.py  pipeforever.py  pipehash.py  pipeinput.py  pipeitembuilder.py  pipeloop.py  pipenumberinput.py  pipeoutput.py  (+24 more)
riko/: __init__.py  api.py  autorss.py  cast.py  collections.py  compile.py  context.py  currencies.py  dates.py  dotdict.py  exceptions.py  helpers.py  locations.py  parsers.py  pprint2.py  topsort.py  types.py  utils.py
test/: createtest.py  feed.xml  pipe_06c4c44316efb0f5f16e4e7fa4589ba2.json  pipe_188eca77fd28c96c559f71f5729d91ec.json  pipe_80fb3dfc08abfa7e27befe9306fc3ded.json  pipe_QMrlL_FS3BGlpwryODY80A.json  pipe_ac45e9eb9b0174a4e53f23c4c9903c3f.json  pipe_b3d43c00f9e1145ff522fb71ea743e99.json  pipe_bd9c0c9793ccaec7582b19f45e24f2e6.json  pipe_c1cfa58f96243cea6ff50a12fc50c984.json  pipe_dAI_R_FS3BG6fTKsAsqenA.json  pipe_zKJifuNS3BGLRQK_GsevXg.json  testbasics.py  testpipe1.json  testpipe_simplest.json  testpipe_simpletagger.json
tests/: __init__.py  conftest.py  pipe_1a0ea1b39a8f261d0339a12fb5f0f03e.py  pipe_404411a8d22104920f3fc1f428f33642.json  pipe_4f26297843f4952fad920af5990ddc50.py  pipe_551507461cbcb19a828165daad5fe007.json  pipe_679e2c544332e978b15b6b163767975f.py  pipe_9420a757a49ddf11d8b98349abb5bcf4.json  pipe_975789b47f17690a21e89b10a702bcbd.json  pipe_UuvYtuMe3hGDsmRgPm7D0g.json  pipe_a3d1afa31f0a24cc51dcbe79f1590343.py  pipe_gigs.py  pipe_kazeeki.py  pipe_kazeeki2.py  pipe_testpipe1.py  pylintrc  standard.rc  test.py  test_basics.py  test_collections.py  test_compile.py  test_dotdict.py  test_examples.py  test_modules.py  test_pipeline.py  test_script.py  testbasics.py
(+288 files in other folders)
